# odoo-dev-mcp

./: .gitignore  LICENSE  OPENCODE_SETUP.md  QUICK_START.md  README.md  TROUBLESHOOTING.md  mcp_docs  odoo_mcp_server.py  opencode.jsonc.example  pyproject.toml  temp_docs.md  test_server.py
docs/: README.md
protocals/: example_weather.py  mcp.md  sdk.md
rules/: odoo-development.mdc
