[project]
name = "odoo-dev-mcp"
version = "1.0.0"
description = "Model Context Protocol server for Odoo module development with version-aware documentation and code generation tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.4.1",
]
authors = [
    {name = "Martin egeskov", email = "mart337i@gmail.com"}
]
keywords = ["odoo", "mcp", "development", "documentation", "code-generation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/egeskov/odoo-dev-mcp"
Repository = "https://github.com/egeskov/odoo-dev-mcp"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
